--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,16 +9,16 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="about.html">Home</a>
+          <a class="nav-link" routerLink="home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="services.html">About</a>
+          <a class="nav-link" routerLink="about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Half Marathon</a>
+          <a class="nav-link" routerLink="halfMarathon">Half Marathon</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" routerLink="contact">Contact</a>
         </li>
       </ul>
     </div>
