Fixing image url so it works with production build.

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background: url('../../assets/group-photo.jpg') no-repeat scroll center center;
+  background: url('/assets/group-photo.jpg') no-repeat scroll center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
