Fixing half marathon link.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           <a class="nav-link" routerLink="about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="halfMarathon">Half Marathon</a>
+          <a class="nav-link" routerLink="half-marathon">Half Marathon</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="contact">Contact</a>
