--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,16 +11,16 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link" routerLink="home">Home</a>
+          <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link" routerLink="about">About</a>
+          <a class="nav-link" routerLink="about" routerLinkActive="active">About</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link" routerLink="half-marathon">Half Marathon</a>
+          <a class="nav-link" routerLink="half-marathon" routerLinkActive="active">Half Marathon</a>
         </li>
         <li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
-          <a class="nav-link" routerLink="contact">Contact</a>
+          <a class="nav-link" routerLink="contact" routerLinkActive="active">Contact</a>
         </li>
       </ul>
     </div>
