Adding home and about content.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,71 @@
-<p>about works!</p>
+<header>
+  <div class="banner-container">
+    <div class="banner-photo">
+
+    </div>
+  </div>
+</header>
+
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6 order-lg-2">
+        <div class="p-5">
+          <img class="img-fluid rounded-circle" src="/assets/stock-running1.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="p-5">
+          <h2 class="display-4">Lorem ipsum...</h2>
+          <p>Omagh Harriers AC is based in Omagh, Co. Tyrone and is affiliated with Athletics Northern Ireland. We have been supporting athletics in the Omagh area for over 20 years and hundreds of athletes have come through our club in this time, some of whom are still training with us and now bringing their children along too.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <div class="p-5">
+          <img class="img-fluid rounded-circle" src="/assets/stock-running2.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="p-5">
+          <h2 class="display-4">Lorem ipsum!</h2>
+          <p>Membership of Omagh Harriers is open to all ages from Primary 6 upwards on completion of an application form and subject to acceptance by the club committee. Our training is as follows:</p>
+          <ul>
+            <li>Monday – Juniors 6-7pm Omagh Leisure Complex</li>
+            <li>Monday – Senior Ladies 6-7pm various venues</li>
+            <li>Wednesday Seniors 6.45pm-8pm Omagh Leisure Complex</li>
+            <li>Friday – Juniors 4-5pm Omagh Leisure Complex focusing on cross country training</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-6 order-lg-2">
+        <div class="p-5">
+          <img class="img-fluid rounded-circle" src="/assets/stock-running3.jpg" alt="">
+        </div>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="p-5">
+          <h2 class="display-4">Let there be rock!</h2>
+          <p>Application for Membership of Omagh Harriers. New membership:</p>
+          <ul>
+            <li>£35 for individual (junior & senior)</li>
+            <li>£50 for family</li>
+          </ul>
+          <p>Click <a>here</a> to below to download application form:</p>
+          <p>For new members in September we have a special autumn rate of £15 for individual and £20 for families.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
