--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,3 @@
-
-
 <header>
   <div class="banner-container">
     <div class="banner-photo">
@@ -8,44 +6,28 @@
   </div>
 </header>
 
-<!-- Page Content -->
 <div class="container">
 
-  <h1 class="my-4">Welcome to Modern Business</h1>
+  <h1 class="my-4">The Home of Omagh Athletics</h1>
 
   <!-- Marketing Icons Section -->
   <div class="row">
-    <div class="col-lg-4 mb-4">
+    <div class="col-lg-6 mb-6">
       <div class="card h-100">
-        <h4 class="card-header">Card Title</h4>
+        <h4 class="card-header">About Us</h4>
         <div class="card-body">
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-            neque.</p>
+          <p class="card-text">Short summary, mission statement...</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a routerLink="/about" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
-    <div class="col-lg-4 mb-4">
+    <div class="col-lg-6 mb-6">
       <div class="card h-100">
-        <h4 class="card-header">Card Title</h4>
+        <h4 class="card-header">Omagh Half Marathon, 2020</h4>
         <div class="card-body">
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam
-            perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut
-            consequuntur, sed eveniet, magni nostrum sint fuga.</p>
-        </div>
-        <div class="card-footer">
-          <a href="#" class="btn btn-primary">Learn More</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-4 mb-4">
-      <div class="card h-100">
-        <h4 class="card-header">Card Title</h4>
-        <div class="card-body">
-          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus
-            neque.</p>
+          <p class="card-text">Short statement, date, number of places, etc.</p>
         </div>
         <div class="card-footer">
           <a href="#" class="btn btn-primary">Learn More</a>
@@ -55,8 +37,10 @@
   </div>
   <!-- /.row -->
 
+  <hr class="my-5" />
+
   <!-- Portfolio Section -->
-  <h2>Portfolio Heading</h2>
+  <h2>Thanks To Our Sponsers</h2>
 
   <div class="row">
     <div class="col-lg-4 col-sm-6 portfolio-item">
@@ -136,41 +120,5 @@
     </div>
   </div>
   <!-- /.row -->
-
-  <!-- Features Section -->
-  <div class="row">
-    <div class="col-lg-6">
-      <h2>Modern Business Features</h2>
-      <p>The Modern Business template by Start Bootstrap includes:</p>
-      <ul>
-        <li>
-          <strong>Bootstrap v4</strong>
-        </li>
-        <li>jQuery</li>
-        <li>Font Awesome</li>
-        <li>Working contact form with validation</li>
-        <li>Unstyled page elements for easy customization</li>
-      </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, omnis doloremque non cum id reprehenderit,
-        quisquam totam aspernatur tempora minima unde aliquid ea culpa sunt. Reiciendis quia dolorum ducimus unde.</p>
-    </div>
-    <div class="col-lg-6">
-      <img class="img-fluid rounded" src="http://placehold.it/700x450" alt="">
-    </div>
-  </div>
-  <!-- /.row -->
-
-  <hr>
-
-  <!-- Call to Action Section -->
-  <div class="row mb-4">
-    <div class="col-md-8">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti
-        beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
-    </div>
-    <div class="col-md-4">
-      <a class="btn btn-lg btn-secondary btn-block" href="#">Call to Action</a>
-    </div>
-  </div>
 
 </div>
