Changing some colours for harriers theme.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -56,7 +56,7 @@
       </div>
       <div class="col-lg-6 order-lg-1">
         <div class="p-5">
-          <h2 class="display-4">Let there be rock!</h2>
+          <h2 class="display-4">Lorem ipsum!</h2>
           <p>Application for Membership of Omagh Harriers. New membership:</p>
           <ul>
             <li>£35 for individual (junior & senior)</li>
