--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,7 @@
           <p class="card-text">Short statement, date, number of places, etc.</p>
         </div>
         <div class="card-footer">
-          <a href="#" class="btn btn-primary">Learn More</a>
+          <a routerLink="/half-marathon" class="btn btn-primary">Learn More</a>
         </div>
       </div>
     </div>
